--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -9,14 +9,20 @@
         android:icon="@drawable/ic_action_upload"/>
 
   <item android:id="@+id/action_list"
-        android:title="@string/action_scan"
+        android:title="@string/action_list"
         android:orderInCategory="200"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_download"/>
 
+  <item android:id="@+id/action_delete"
+        android:title="@string/action_delete"
+        android:orderInCategory="300"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_remove"/>
+
   <item android:id="@+id/action_account"
         android:title="@string/action_account"
         android:showAsAction="never"
-        android:orderInCategory="300" />
+        android:orderInCategory="400" />
 
 </menu>
